[SAU-846] fix reconstruction data pdf icon alignment

--- a/app/styles/region-detail.scss
+++ b/app/styles/region-detail.scss
@@ -200,6 +200,10 @@
     h3.values-by {
         margin-top: 35px;
     }
+
+    i.rec-doc {
+      margin-left: 16px;
+    }
   }
 
   .biodiversity {
